# hydro-rs

./: .gitignore  Cargo.toml  README.md  plot.py
01-euler1d-nodeps/: Cargo.toml
01-euler1d-nodeps/src/: main.rs
02-euler1d-ndarray/: Cargo.toml
02-euler1d-ndarray/src/: main.rs
03-euler1d-locimport/src/: main.rs
04-euler1d-plm/: Cargo.toml
04-euler1d-plm/src/: main.rs
05-euler1d-refactor/: Cargo.toml
05-euler1d-refactor/src/: main.rs
06-euler1d-hdf5/: Cargo.toml
06-euler1d-hdf5/src/: main.rs
07-euler1d-cli/: Cargo.toml
07-euler1d-cli/src/: main.rs
08-euler1d-cfg/: Cargo.toml
08-euler1d-cfg/src/: main.rs
euler1d-locimport/: Cargo.toml
euler1d-locimport/src/: main.rs
euler1d-ndarray/src/: main.rs
euler1d-plm/: Cargo.toml
euler1d-plm/src/: main.rs
lib-config/: Cargo.toml
lib-config/src/: lib.rs
lib-euler1d/: Cargo.toml
lib-euler1d/src/: lib.rs
lib-hydro-algorithms/: Cargo.toml
lib-hydro-algorithms/src/: lib.rs  piecewise_linear.rs  runge_kutta.rs  solution_states.rs
