[workspace]
members = [
    "01-euler1d-nodeps",
    "02-euler1d-ndarray",
    "03-euler1d-locimport",
    "04-euler1d-plm",
    "05-euler1d-refactor",
    "06-euler1d-hdf5",
    "07-euler1d-cli",
    "08-euler1d-cfg",
    "lib-euler1d",
    "lib-hydro-algorithms",
    "lib-config",
    ]

[profile.release]
lto = false # enabling link-time optimizations on the release build can
            # significantly improve performance
