[package]
name = "euler1d-plm"
version = "0.1.0"
authors = ["Jonathan Zrake <jonathan.zrake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
num = "0.3.0"
lib-euler1d = { path = "../lib-euler1d" }
